--- a/css/checkout.css
+++ b/css/checkout.css
@@ -110,10 +110,20 @@ body {
     display: grid;
     grid-template-columns: minmax(0, 1fr);
     background-color: hsl(var(--clr-brand-dark));
-    color: hsl(var(--clr-white));
     font-family: var(--ff-serif);
     font-size: var(--fs-body);
     font-weight: var(--fw-regular);
+}
+
+.qoraP {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #090c0991;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
 }
 
 .checkout_container {
@@ -473,6 +483,34 @@ body {
     color: hsl(var(--clr-gray-400));
     pointer-events: all;
     will-change: transform;
+}
+
+.css-pd2080:hover {
+    position: relative;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+    color: hsl(var(--clr-gray-400));
+    pointer-events: all;
+    will-change: transform;
+}
+
+.css-pd2080:hover >div {
+    opacity: 1;
+    pointer-events: all;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
 }
 
 .css-1hffiq1 {
@@ -1078,6 +1116,7 @@ style attribute {
 }
 
 .css-1vzof1e {
+    display: none;
     position: relative;
     width: 100%;
     max-width: 1660px;
@@ -1408,6 +1447,7 @@ style attribute {
 }
 
 .SiteFooter_root__sZtgi {
+    color: #fff;
     position: relative;
     background-color: hsl(var(--clr-brand-dark));
     z-index: 3;
