--- a/calendar.css
+++ b/calendar.css
@@ -17,6 +17,12 @@
       font-size: 12px !important;
     }
   }
+
+.kota_kalendar {
+  position: absolute;
+  top: 35px;
+  z-index: 200001;
+} 
   
   .calendar_card {
     display: none;
@@ -28,7 +34,8 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     position: relative;
     margin-top: 1.5rem;
-    z-index: 200001;
+
+    color: #000 !important;
   }
   
   .selected-day {
