--- a/calendar.css
+++ b/calendar.css
@@ -34,7 +34,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     position: relative;
     margin-top: 1.5rem;
-
+    z-index: 100;
     color: #000 !important;
   }
   
