--- a/css/email.css
+++ b/css/email.css
@@ -235,3 +235,22 @@ button, input, optgroup, select, textarea {
 button, input {
     overflow: visible;
 }
+
+
+@media (max-width:600px) {
+    section {
+        overflow: hidden;
+        margin: 0 0 20px;
+    }
+
+    #personal-details-section input, #company-details-section input {
+        width: 100%;
+        max-width: 600px;
+    }
+
+    #personal-details-section > ul > li, #company-details-section > ul > li {
+        margin: 10px 0 0;
+        width: 100%;
+        max-width: 378px;
+    }
+}
