--- a/css/time.css
+++ b/css/time.css
@@ -963,6 +963,119 @@ ul {
     margin: 20px 0 0;
 }
 
+@media (max-width:600px) {
+    .page-title h1 {
+        margin: 0 0 30px;
+        font-family: "HeinekenSerif18-Bold";
+        font-size: 7.2rem;
+        font-size: 2rem;
+        color: #13670b;
+        letter-spacing: 0;
+        line-height: 1.2em;
+        text-align: center;
+    }
+    
+
+    .page-wrapper {
+        width: 100%;
+        max-width: 1560px;
+        margin: 0 auto;
+        padding: 0;
+    }
+    
+    .site-header .steps {
+        pointer-events: all;
+        display: none;
+        height: 0px;
+        margin: 45px auto 0px;
+        -webkit-box-align: center;
+        align-items: center;
+        border-bottom: 1px solid rgb(221, 221, 221);
+        padding: 0px;
+        list-style: none;
+    }
+    
+    .site-header .logo {
+        pointer-events: all;
+        cursor: pointer;
+        outline: none;
+        margin: auto;
+        /* position: absolute; */
+        flex: 0 0 154px;
+        width: 154px;
+        height: 110px;
+        display: inline-block;
+        background-image: url(/media/EXPERIENCE_1_C_RGB_154x90_nmZiBrl-2.png);
+        background-size: 100%;
+        background-position: center top;
+        background-repeat: no-repeat;
+        transition: transform 200ms ease 0s;
+        will-change: transform;
+        z-index: 5;
+    }
+
+    .page-content {
+        width: 100%;
+        max-width: calc(100% - 60px);
+        margin: -50px auto 0;
+        padding: 20px;
+        background-color: #fff;
+    }
+
+    h2, .adyen-checkout__iframe h2 {
+        color: #999999;
+        font-family: "HeinekenSerif18-Bold";
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    .datepicker-input .date-text {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        border: 1px solid #BBBCBD;
+        padding: 0 5px;
+        color: #13670B;
+        font-family: "HeinekenSerif18-Bold";
+        font-size: 16px;
+        line-height: 48px;
+        font-weight: 700;
+    }
+    .timeslots-container .item {
+        float: left;
+        position: relative;
+        width: 45%;
+        padding: 0 0 10px 10px;
+    }
+
+    #previous-button {
+        display: block;
+        border: 2px solid #13670B;
+        margin: 0 50px;
+        color: #13670B;
+        font-size: 14px;
+        line-height: 46px;
+        text-align: center;
+        text-decoration: none;
+        -webkit-transition: all 0.25s ease;
+        -moz-transition: all 0.25s ease;
+        -ms-transition: all 0.25s ease;
+        -o-transition: all 0.25s ease;
+        transition: all 0.25s ease;
+        margin-top: 2rem;
+    }
+
+    .site-footer .top .wrap {
+        display: flex;
+        justify-content: center;
+        /* align-items: flex-start; */
+        text-align: center;
+    }
+}
+
 .language-selector .active-language {
     cursor: pointer;
     display: -webkit-inline-box;
