--- a/calendar.css
+++ b/calendar.css
@@ -175,3 +175,12 @@
     justify-content: space-between;
     gap: 30px;
   }
+
+
+  @media (max-width:600px) {
+    .kota_kalendar {
+      position: absolute;
+      top: 0;
+      z-index: 200001;
+  }  
+  }
